--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                                 <a href="./build/html/checkbox.html" class="card__link"></a>
                                 <div class="card__content preview-flex__checkbox">
                                     <label class="checkbox checkbox_preview">
-                                        <input type="checkbox" class="checkbox__native" name="default" focus>
+                                        <input type="checkbox" class="checkbox__native" id="checkbox-default" name="default" focus>
                                         <div class="checkbox__box">
                                             <svg width="24" height="24" class="checkbox__img">
                                                 <use xlink:href="./assets/images/sprite.svg#check"></use>
@@ -496,7 +496,7 @@
                                         <span class="checkbox__text">Default</span> 
                                     </label>
                                     <label class="checkbox checkbox_preview">
-                                        <input type="checkbox" class="checkbox__native" id="checked" name="checked" checked>
+                                        <input type="checkbox" class="checkbox__native" id="checkbox-checked" name="checked" checked>
                                         <div class="checkbox__box">
                                             <svg width="24" height="24" class="checkbox__img">
                                                 <use xlink:href="./assets/images/sprite.svg#check"></use>
@@ -505,7 +505,7 @@
                                         <span class="checkbox__text">Checked</span>
                                     </label>
                                     <label class="checkbox checkbox_preview">
-                                        <input type="checkbox" class="checkbox__native" id="disabled" name="disabled" disabled>
+                                        <input type="checkbox" class="checkbox__native" id="checkbox-disabled" name="disabled" disabled>
                                         <div class="checkbox__box">
                                             <svg width="24" height="24" class="checkbox__img">
                                                 <use xlink:href="./assets/images/sprite.svg#check"></use>
@@ -524,21 +524,21 @@
                                 <a href="./build/html/radio.html" class="card__link"></a>
                                 <div class="card__content preview-flex__radio">
                                     <label class="radio radio_preview">
-                                        <input type="radio" class="radio__native" name="radio">
+                                        <input type="radio" class="radio__native" id="radio-default" name="radio">
                                         <div class="radio__box">
                                             <div class="radio__img"></div>
                                         </div>
                                         <span class="radio__text">Default</span>
                                     </label>
                                     <label class="radio radio_preview">
-                                        <input type="radio" class="radio__native" id="checked" name="radio" checked>
+                                        <input type="radio" class="radio__native" id="radio-checked" name="radio" checked>
                                         <div class="radio__box">
                                             <div class="radio__img"></div>
                                         </div>
                                         <span class="radio__text">Checked</span>
                                     </label>
                                     <label class="radio radio_preview">
-                                        <input type="radio" class="radio__native" id="disabled" name="radio-disabled" disabled>
+                                        <input type="radio" class="radio__native" id="radio-disabled" name="radio-disabled" disabled>
                                         <div class="radio__box">
                                             <div class="radio__img"></div>
                                         </div>
@@ -555,21 +555,21 @@
                                 <a href="./build/html/toggler.html" class="card__link"></a>
                                 <div class="card__content preview-flex__toggler">
                                     <label class="toggler toggler_preview">
-                                        <input type="checkbox" class="toggler__native" id="on" name="on" focus>
+                                        <input type="checkbox" class="toggler__native" id="toggler-off" name="on" focus>
                                         <div class="toggler__box">
                                             <div class="toggler__img"></div>
                                         </div>
                                         <span class="toggler__text">Off</span>
                                     </label>
                                     <label class="toggler toggler_preview">
-                                        <input type="checkbox" class="toggler__native" id="off" name="off" checked>
+                                        <input type="checkbox" class="toggler__native" id="toggler-on" name="off" checked>
                                         <div class="toggler__box">
                                             <div class="toggler__img"></div>
                                         </div>
                                         <span class="toggler__text">On</span>
                                     </label>
                                     <label class="toggler toggler_preview">
-                                        <input type="checkbox" class="toggler__native" id="disabled" name="disabled" disabled>
+                                        <input type="checkbox" class="toggler__native" id="toggler-disabled" name="disabled" disabled>
                                         <div class="toggler__box">
                                             <div class="toggler__img"></div>
                                         </div>
@@ -587,7 +587,7 @@
                                 <div class="card__content">
                                     <label class="input input_preview">
                                         <div class="input__label">DEFAULT</div>
-                                        <input type="text" class="input__field input__field_preview"  name="default" placeholder="Placeholder">
+                                        <input type="text" class="input__field input__field_preview" id="input-default" name="default" placeholder="Placeholder">
                                         <div class="input__img">
                                             <svg width="24" height="24" class="input__svg_success">
                                                 <use xlink:href="../../assets/images/sprite.svg#success"></use>
@@ -599,7 +599,7 @@
                                     </label>
                                     <label class="input input_preview">
                                         <div class="input__label">SUCCESS</div>
-                                        <input type="text" class="input__field input__field_preview input__field_success" id="success" name="success" value="Success">
+                                        <input type="text" class="input__field input__field_preview input__field_success" id="input-success" name="success" value="Success">
                                         <div class="input__img">
                                             <svg width="24" height="24" class="input__svg_success">
                                                 <use xlink:href="../../assets/images/sprite.svg#success"></use>
@@ -611,7 +611,7 @@
                                     </label>
                                     <label class="input input_preview">
                                         <div class="input__label">ERROR</div>
-                                        <input type="text" class="input__field input__field_preview input_previw input__field_invalid" name="invald" value="Error">
+                                        <input type="text" class="input__field input__field_preview input_previw input__field_invalid" id="input-disabled" name="invald" value="Error">
                                         <div class="input__img">
                                             <svg width="24" height="24" class="input__svg_success">
                                                 <use xlink:href="../../assets/images/sprite.svg#success"></use>
@@ -683,7 +683,7 @@
                                 <a href="./build/html/checkbox.html" class="card__link"></a>
                                 <div class="card__content preview-flex__checkbox">
                                     <label class="checkbox checkbox_preview">
-                                        <input type="checkbox" class="checkbox__native" name="default" focus>
+                                        <input type="checkbox" class="checkbox__native" id="checkbox-default-components" name="default">
                                         <div class="checkbox__box">
                                             <svg width="24" height="24" class="checkbox__img">
                                                 <use xlink:href="./assets/images/sprite.svg#check"></use>
@@ -692,7 +692,7 @@
                                         <span class="checkbox__text">Default</span>
                                     </label>
                                     <label class="checkbox checkbox_preview">
-                                        <input type="checkbox" class="checkbox__native" id="checked" name="checked" checked>
+                                        <input type="checkbox" class="checkbox__native" id="checkbox-checked-component" name="checked" checked>
                                         <div class="checkbox__box">
                                             <svg width="24" height="24" class="checkbox__img">
                                                 <use xlink:href="./assets/images/sprite.svg#check"></use>
@@ -701,8 +701,8 @@
                                         <span class="checkbox__text">Checked</span>
                                     </label>
                                     <label class="checkbox checkbox_preview">
-                                        <input type="checkbox" class="checkbox__native" id="disabled" name="disabled" disabled>
-                                        <div class="checkbox__box">
+                                        <input type="checkbox" class="checkbox__native" id="checkbox-disabled-component" name="disabled" disabled>
+                                        <div class="checkbox__box">-
                                             <svg width="24" height="24" class="checkbox__img">
                                                 <use xlink:href="./assets/images/sprite.svg#check"></use>
                                             </svg>
@@ -720,21 +720,21 @@
                                 <a href="./build/html/radio.html" class="card__link"></a>
                                 <div class="card__content preview-flex__radio">
                                     <label class="radio radio_preview">
-                                        <input type="radio" class="radio__native" name="radio">
+                                        <input type="radio" class="radio__native" id="radio-default-component" name="radio-components">
                                         <div class="radio__box">
                                             <div class="radio__img"></div>
                                         </div>
                                         <span class="radio__text">Default</span>
                                     </label>
                                     <label class="radio radio_preview">
-                                        <input type="radio" class="radio__native" id="checked" name="radio" checked>
+                                        <input type="radio" class="radio__native" id="radio-checked-component" name="radio-components" checked>
                                         <div class="radio__box">
                                             <div class="radio__img"></div>
                                         </div>
                                         <span class="radio__text">Checked</span>
                                     </label>
                                     <label class="radio radio_preview">
-                                        <input type="radio" class="radio__native" id="disabled" name="radio-disabled" disabled>
+                                        <input type="radio" class="radio__native" id="radio-disabled-component" name="radio-disabled-components" disabled>
                                         <div class="radio__box">
                                             <div class="radio__img"></div>
                                         </div>
@@ -751,21 +751,21 @@
                                 <a href="./build/html/toggler.html" class="card__link"></a>
                                 <div class="card__content preview-flex__toggler">
                                     <label class="toggler toggler_preview">
-                                        <input type="checkbox" class="toggler__native" id="on" name="on" focus>
+                                        <input type="checkbox" class="toggler__native" id="toggler-off-component" name="on" focus>
                                         <div class="toggler__box">
                                             <div class="toggler__img"></div>
                                         </div>
                                         <span class="toggler__text">Off</span>
                                     </label>
                                     <label class="toggler toggler_preview">
-                                        <input type="checkbox" class="toggler__native" id="off" name="off" checked>
+                                        <input type="checkbox" class="toggler__native" id="toggler-on-component" name="off" checked>
                                         <div class="toggler__box">
                                             <div class="toggler__img"></div>
                                         </div>
                                         <span class="toggler__text">On</span>
                                     </label>
                                     <label class="toggler toggler_preview">
-                                        <input type="checkbox" class="toggler__native" id="disabled" name="disabled" disabled>
+                                        <input type="checkbox" class="toggler__native" id="toggler-disabled-component" name="disabled" disabled>
                                         <div class="toggler__box">
                                             <div class="toggler__img"></div>
                                         </div>
@@ -783,7 +783,7 @@
                                 <div class="card__content">
                                     <label class="input input_preview">
                                         <div class="input__label">DEFAULT</div>
-                                        <input type="text" class="input__field input__field_preview" name="default"
+                                        <input type="text" class="input__field input__field_preview" id="input-default-component" name="default"
                                             placeholder="Placeholder">
                                         <div class="input__img">
                                             <svg width="24" height="24" class="input__svg_success">
@@ -796,7 +796,7 @@
                                     </label>
                                     <label class="input input_preview">
                                         <div class="input__label">SUCCESS</div>
-                                        <input type="text" class="input__field input__field_preview input__field_success" name="success" value="Success">
+                                        <input type="text" class="input__field input__field_preview input__field_success" id="input-success-component" name="success" value="Success">
                                         <div class="input__img">
                                             <svg width="24" height="24" class="input__svg_success">
                                                 <use xlink:href="../../assets/images/sprite.svg#success"></use>
@@ -809,7 +809,7 @@
                                     <label class="input input_preview">
                                         <div class="input__label">ERROR</div>
                                         <input type="text" class="input__field input__field_preview input_previw input__field_invalid"
-                                            name="invald" value="Error">
+                                            id="input-error-component" name="invald" value="Error">
                                         <div class="input__img">
                                             <svg width="24" height="24" class="input__svg_success">
                                                 <use xlink:href="../../assets/images/sprite.svg#success"></use>
